[tool.poetry]
name = "aws-container"
version = "0.1.0"
description = "basic container service for aws-faragate using python and pulumi"
authors = ["Cyro Queiroz queirozcyro@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
